[gd_scene load_steps=9 format=2]

[ext_resource path="res://Grafik/Assets/Dachboden/Module/module.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Assets/Dachboden/Module/knodeiconframeleft.png" type="Texture" id=2]
[ext_resource path="res://Szenen/DG/Modul.gd" type="Script" id=3]
[ext_resource path="res://Szenen/DG/InfoSprite.gd" type="Script" id=4]
[ext_resource path="res://Grafik/Assets/Dachboden/Module/knodeiconframe.png" type="Texture" id=5]
[ext_resource path="res://Grafik/Assets/Dachboden/Module/knodeiconframeright.png" type="Texture" id=6]
[ext_resource path="res://Grafik/Assets/Dachboden/VoltknodeRight.png" type="Texture" id=7]
[ext_resource path="res://Grafik/Assets/Dachboden/VoltknodeLeft.png" type="Texture" id=8]

[node name="Modul" type="Node2D"]
script = ExtResource( 3 )

[node name="InfoSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -100 )
z_index = 5
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 113.083, 62 )
script = ExtResource( 4 )

[node name="Delete" type="Control" parent="InfoSprite"]
margin_top = -27.0
margin_right = 56.0
margin_bottom = 31.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CutOut" type="Control" parent="InfoSprite"]
margin_left = -55.0
margin_top = -28.0
margin_bottom = 27.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCCW" type="Control" parent="InfoSprite"]
margin_left = -102.0
margin_top = -28.0
margin_right = -49.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLSprite" type="Sprite" parent="InfoSprite"]
position = Vector2( -76.6104, 0.610413 )
texture = ExtResource( 2 )

[node name="TurnCW" type="Control" parent="InfoSprite"]
margin_left = 50.0
margin_top = -28.0
margin_right = 101.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnRSprite" type="Sprite" parent="InfoSprite"]
position = Vector2( 76, 0.653687 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 196.07, -0.98, 42, 46 )

[node name="leftK" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="rightK" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Connect" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="InfoSprite/Delete" to="." method="_on_Delete_gui_input"]
[connection signal="gui_input" from="InfoSprite/CutOut" to="." method="_on_CutOut_gui_input"]
[connection signal="gui_input" from="InfoSprite/TurnCCW" to="." method="_on_TurnCCW_gui_input"]
[connection signal="gui_input" from="InfoSprite/TurnCW" to="." method="_on_TurnCW_gui_input"]
